# TP2_python

./: .gitignore  Análisis_descriptivo.ipynb  Construccion_variable_rta.ipynb  NOTAS.md  README.md  main.py  pyproject.toml
notebooks/: 01_Análisis_descriptivo.ipynb  02_Construccion_variable_rta.ipynb  03_Prepocesamiento_de_datos.ipynb  03_Tratamiento_datos_faltantes.ipynb  04_Selección_de_variables.ipynb  05_Random_forest.ipynb  06_Modelo_regresion_logistica.ipynb  07_Comparación_de_modelos.ipynb  08_Modelo_final.ipynb
