[project]
name = "tp2-python"
version = "0.1.0"
description = "Este es nuestro segundo trabajo práctico de la materia Programación en Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "plotnine>=0.15.7",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
